--- a/page/gallery/style.css
+++ b/page/gallery/style.css
@@ -97,8 +97,8 @@ body {
 }
 
 .text-cars {
-    margin-left: 316px;
-    text-align: start;
+    /* margin-left: 316px; */
+    text-align: center;
 }
 
 .text-cars span {
@@ -169,7 +169,7 @@ footer ul li a:hover {
         justify-content: flex-start;
         position: fixed;
         top: 0;
-        right: -310px;
+        right: -320px;
         height: 100vh;
         width: 300px;
         background-color: black;
@@ -206,27 +206,12 @@ footer ul li a:hover {
         font-size: 24px;
     }
 
-    .text-cars {
-        margin-left: 195px;
-        text-align: start;
-    }
 }
 
 @media (max-width: 430px) {
 
     #resp-nav.active {
         right: -50px;
-    }
-
-    .text-cars {
-        margin-left: 110px;
-        text-align: start;
-    }
-
-    .card-cars p {
-        margin-top: 5px;
-        width: 250px;
-        color: white;
     }
 
     
