--- a/page/news/style.css
+++ b/page/news/style.css
@@ -84,6 +84,10 @@ body {
     object-fit: cover;
 }
 
+.news-section div {
+    width: 265px;
+}
+
 .news-section div h4, h3, p{
     color: white;
     margin: 10px 0;
@@ -159,6 +163,29 @@ footer ul li a:hover {
     font-weight: 500;
 }
 
+@media (max-width: 922px) {
+    .news-section {
+        display: flex;
+        justify-content: center;
+        gap: 35px;
+        padding: 40px 200px 0 200px;
+        margin-bottom: 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .news-section div {
+        width: 367px;
+    }
+
+    .news-section div img {
+        display: inline-block;
+        width: 367px;
+        height: 168.75px;
+        object-fit: cover;
+    }
+}
+
 
 @media (max-width: 768px) {
 
@@ -169,7 +196,7 @@ footer ul li a:hover {
         justify-content: flex-start;
         position: fixed;
         top: 0;
-        right: -310px;
+        right: -320px;
         height: 100vh;
         width: 300px;
         background-color: black;
@@ -216,6 +243,10 @@ footer ul li a:hover {
         align-items: center;
     }
 
+    .news-section div {
+        width: 367px;
+    }
+
     .news-section div img {
         display: inline-block;
         width: 367px;
@@ -238,6 +269,10 @@ footer ul li a:hover {
         margin-bottom: 0;
         flex-direction: column;
         align-items: center;
+    }
+
+    .news-section div {
+        width: 250px;
     }
 
     .news-section div img {
