--- a/page/subscription/style.css
+++ b/page/subscription/style.css
@@ -140,11 +140,14 @@ body {
 }
 
 .register-fill div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: start;
-    padding: 0 390px;
+    /* padding: 0 390px; */
     padding-bottom: 20px;
+    justify-content: center;
 }
-
 
 .register-fill div div {
     padding: 0;
@@ -172,6 +175,7 @@ body {
 
 #terms-check {
     display: flex;
+    flex-direction: row;
 }
 
 #terms-check p {
@@ -232,6 +236,7 @@ footer ul li a {
 footer ul li a:hover {
     color: #FD1B26;
     font-weight: 500;
+    transition: 0.3s ease;
 }
 
 
@@ -244,7 +249,7 @@ footer ul li a:hover {
         justify-content: flex-start;
         position: fixed;
         top: 0;
-        right: -310px;
+        right: -320px;
         height: 100vh;
         width: 300px;
         background-color: black;
@@ -297,6 +302,26 @@ footer ul li a:hover {
         padding-bottom: 20px;
     }
 
+    .register-fill div div input {
+        background-color: white;
+        border: 0;
+        border-radius: 2px;
+        width: 250px;
+        height: 40px;
+        margin-top: 5px;
+        padding: 0 17px;
+    }
+
+    .register-fill div div select {
+        background-color: white;
+        border: none;
+        border-radius: 2px;
+        width: 283px;
+        height: 40px;
+        margin-top: 5px;
+        padding: 0 17px;
+    }
+
 }
 
 @media (max-width: 430px) {
@@ -306,11 +331,11 @@ footer ul li a:hover {
     }
 
 
-    .register-fill div {
+    /* .register-fill div {
         text-align: start;
         padding: 0 0 0 75px;
         padding-bottom: 20px;
-    }
+    } */
 
     .register-fill div div input {
         background-color: white;
