--- a/style.css
+++ b/style.css
@@ -79,20 +79,26 @@ body {
 
 #card-left {
     margin-right: 0;
+    margin-left: 0;
+}
+
+#card-right {
+    margin-right: 0;
+    margin-left: 0;
 }
 
 .card-news h3 {
     margin-top: 10px;
     color: white;
-    text-align: start;
-    margin-left: 95px;
+    text-align: center;
+    margin-left: 0;
 }
 
 .card-news p {
-    text-align: start;
-    margin-left: 95px;
+    text-align: center;
     margin-top: 9px;
     color: white;
+    margin-left: 0;
 }
 
 
@@ -233,6 +239,23 @@ footer ul li a:hover {
     font-weight: 500;
 }
 
+@media (min-width: 1240px) {
+    .card-news h3 {
+        margin-top: 10px;
+        color: white;
+        text-align: center;
+        margin-left: 0;
+    }
+
+    .card-news p {
+        text-align: center;
+        margin-top: 9px;
+        color: white;
+        margin-left: 0;
+    }
+}
+
+
 @media (max-width: 768px) {
 
     #resp-nav {
@@ -242,7 +265,7 @@ footer ul li a:hover {
         justify-content: flex-start;
         position: fixed;
         top: 0;
-        right: -310px;
+        right: -320px;
         height: 100vh;
         width: 300px;
         background-color: black;
@@ -294,15 +317,21 @@ footer ul li a:hover {
     .card-news h3 {
         margin-top: 10px;
         color: white;
-        text-align: start;
-        margin-left: 115px;
+        text-align: center;
+        margin-left: 0;
     }
 
     .card-news p {
-        text-align: start;
-        margin-left: 115px;
+        text-align: center;
         margin-top: 9px;
         color: white;
+        margin-left: 0;
+    }
+
+    .text-about p {
+        font-size: 20px;
+        padding: 10px 150px 10px 150px;
+        width: 368px;
     }
 }
 
@@ -315,16 +344,16 @@ footer ul li a:hover {
     .card-news h3 {
         margin-top: 10px;
         color: white;
-        text-align: start;
-        margin-left: 65px;
+        text-align: center;
+        margin-left: 0;
     }
 
     .card-news p {
-        text-align: start;
-        margin-left: 65px;
+        text-align: center;
         margin-top: 9px;
         color: white;
-        margin-right: 100px;
+        margin-left: 0;
+        font-size: 10px;
     }
 
     .text-about h1 {
@@ -348,5 +377,48 @@ footer ul li a:hover {
         text-align: center;
         text-decoration: none;
     }
+}
+
+@media (max-width: 390px) {
+
+    .card-news h3 {
+        margin-top: 10px;
+        color: white;
+        text-align: center;
+        margin-left: 0;
+    }
+
+    .card-news p {
+        text-align: center;
+        margin-top: 9px;
+        color: white;
+        margin-left: 0;
+    }
+
+    .download-section a {
+        background-color: white;
+        color: black;
+        border-radius: 60px;
+        /* padding: 10px 0px 10px 0px; */
+        text-align: center;
+        text-decoration: none;
+    }
+
+    .download-section span{
+        /* background-color: red; */
+        width: 150px;
+        position: relative;
+        left: -25px;
+    }
+
+    .download-section h2 {
+        text-align: center;
+        margin-bottom: 20px;
+        color: white;
+        position: relative;
+        left: -20px;
+    }
+
+
 }
 
