--- a/page/gallery/style.css
+++ b/page/gallery/style.css
@@ -112,6 +112,7 @@ body {
 .text-cars span:hover {
     background-color: #FD1B26;
     transition: 0.3s ease;
+    cursor: pointer;
 }
 
 .text-cars span a {
