--- a/page/news/style.css
+++ b/page/news/style.css
@@ -115,6 +115,7 @@ body {
 .more-news span:hover {
     background-color: #FD1B26;
     transition: 0.3s ease;
+    cursor: pointer;
 }
 
 .more-news span a {
@@ -265,7 +266,7 @@ footer ul li a:hover {
         display: flex;
         justify-content: center;
         gap: 35px;
-        padding: 40px 200px 0 200px;
+        padding: 40px 100px 0 100px;
         margin-bottom: 0;
         flex-direction: column;
         align-items: center;
