--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ body {
     padding: 10px 15px;
     border-radius: 5px;
     transition: 0.3s ease;
+    cursor: pointer;
 }
 
 
@@ -165,6 +166,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin: 150px;
 }
 
@@ -177,6 +179,7 @@ body {
 .download-section span {
     text-align: center;
     /* margin-top: 100px; */
+    width: 200px;
 }
 
 
@@ -197,6 +200,7 @@ body {
     text-align: center;
     text-decoration: none;
     transition: 0.3s ease;
+    cursor: pointer;
 }
 
 /* FOOTER */
@@ -237,6 +241,7 @@ footer ul li a {
 footer ul li a:hover {
     color: #FD1B26;
     font-weight: 500;
+    cursor: pointer;
 }
 
 @media (min-width: 1240px) {
@@ -330,7 +335,6 @@ footer ul li a:hover {
 
     .text-about p {
         font-size: 20px;
-        padding: 10px 150px 10px 150px;
         width: 368px;
     }
 }
@@ -369,21 +373,6 @@ footer ul li a:hover {
         text-align: justify;
     }
 
-    .download-section span{
-        /* background-color: red; */
-        width: 150px;
-        position: relative;
-        left: -25px;
-    }
-
-    .download-section h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        color: white;
-        position: relative;
-        left: -20px;
-    }
-
     .download-section a {
         background-color: white;
         color: black;
@@ -409,31 +398,6 @@ footer ul li a:hover {
         color: white;
         margin-left: 0;
     }
-
-    .download-section a {
-        background-color: white;
-        color: black;
-        border-radius: 60px;
-        /* padding: 10px 0px 10px 0px; */
-        text-align: center;
-        text-decoration: none;
-    }
-
-    .download-section span{
-        /* background-color: red; */
-        width: 150px;
-        position: relative;
-        left: -25px;
-    }
-
-    .download-section h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        color: white;
-        position: relative;
-        left: -20px;
-    }
-
 
 }
 
